added projects 5, 6 and 7

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
 
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/9" target="_blank">Exploring How Music Shapes Emotions in the Brain. A network connectivity analysis perspective on fMRI data</a></h3>
-            <p>By <a href="https://github.com/mlionello" target="_blank">Matteo Lionello</a></p>
+            <p>By <a href="https://github.com/mlionello" target="_blank"><b>Matteo Lionello</b></a></p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj1">Description</a>
 
             <div class="collapse" id='collapse_prj1'>
@@ -904,7 +904,7 @@
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/8" target="_blank">Functional MRI Analysis of Connectivity and Network Dynamics of central fatigue in Multiple Sclerosis disease</a></h3>
             <p>
-              by Alberto Benelli
+              By <b>Alberto Benelli</b>
             </p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj2">Description</a>
 
@@ -954,7 +954,7 @@
 
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/10" target="_blank">NeuroInfer and Database update</a></h3>
-            <p>By Davide Coraci, Matteo Lionello & Sara Mazzuccato</p>
+            <p>By <b>Davide Coraci</b>, Matteo Lionello & Sara Mazzuccato</p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj3">Description</a>
 
             <div class="collapse" id='collapse_prj3'>
@@ -988,7 +988,7 @@
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/11" target="_blank">Dreamcatcher: decoding dream-event in EEG data with multimodal language models and interpretability tools</a></h3>
             <p>
-              by Lorenzo Bertiolini
+              By <b>Lorenzo Bertiolini</b>
             </p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj4">Description</a>
 
@@ -1022,6 +1022,148 @@
             <img src="images/projects/project4.png" class="img-fluid" alt="">
           </div>
         </div> <!-- Project Item RIGHT -->
+
+        <hr>
+
+        <!--Project 5-->
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project5.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/12" target="_blank">Navigating Depression on Social Media: NLP and Cognitive Network Insights</a></h3>
+            <p>By <b>Irene Sánchez Rodríguez</b>, Liber Dorizzi, Mattia Marzi & Riccardo Vella</p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj5">Description</a>
+
+            <div class="collapse" id='collapse_prj5'>
+              <p>
+                <br>
+                We are using NLP and cognitive network analysis to explore and map depression-related discussions on social media, aiming to uncover patterns and insights into how mental health struggles are expressed online. By combining advanced tools like transformer models, interpretability frameworks, and graph analysis, we aim to create a novel approach to understand depression narratives.
+                Resources include pre-trained models and a curated dataset to help participants dive right into preprocessing, modeling, and visualization.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>Preprocess and clean the social media dataset</li>
+                  <li>Perform exploratory data analysis to identify key patterns and statistics</li>
+                  <li>Fine-tune transformer-based models for classifying depression-related posts</li>
+                  <li>Use XAI to extract key features driving model predictions</li>
+                  <li>Construct a cognitive network of depression-related terms and relationships</li>
+                  <li>Compare traditional NLP models with network-enhanced approaches</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Python coding</li>
+                  <li>NLP and text analysis: Knowledge of text preprocessing, tokenization, and working with existing tools in this matter</li>
+                  <li>Machine learning: Familiarity with training and fine-tuning transformer models like BERT</li>
+                  <li>Graph analysis: Experience with tools like NetworkX or Gephi to build and analyze cognitive networks</li>
+                  <li>Critical thinking and communication: Ability to interpret results, suggest improvements, and collaborate effectively, especially for participants less familiar with coding</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+        </div> <!-- Project Item LEFT -->
+
+        <hr>
+
+        <!--Project 6-->
+         <div class="row gy-4 align-items-center projects-item">
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/13" target="_blank">The Influence of Arousal on Brain Connectivity: A Multimodal Study Proposal</a></h3>
+            <p>
+              By <b>Santa Sozzi, Miriam Acquafredda & Giacomo Mazzotta</b>
+            </p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj6">Description</a>
+
+            <div class="collapse" id='collapse_prj6'>
+              <p>
+                <br>
+                Arousal, defined as the behavioral state of alertness, is a potential driver of variability in brain activity and functional connectivity, particularly within networks such as the Default Mode Network and the Salience Network. In this project, we aim to investigate the effects of arousal on brain connectivity using a recently published open-access dataset that integrates pre-processed pupillometry, fMRI, and EEG data, enabling a comprehensive multimodal analysis.
+                By combining pupillometry (as a proxy to identify high and low arousal levels), EEG (offering high temporal resolution of brain activity), and fMRI (providing high spatial resolution of functional activity), we can investigate the relationships between arousal states and both functional and effective connectivity across key brain regions.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>Identify arousal-related brain regions through the analysis of the relationships between pupil dynamics and fMRI signals at both voxel and region levels (e.g., via correlation or regression analyses on resting-state data)</li>
+                  <li>Compare functional and effective connectivity within arousal-related networks across high and low arousal states, using indices derived from both fMRI and EEG resting-state connectivity</li>
+                </ul>
+                As a secondary objective, we aim to replicate these analyses on a visual task dataset to compare the impact of arousal under resting-state and task-based conditions.
+                <br>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>MATLAB programming (basic)</li>
+                  <li>Python programming (basic)</li>
+                  <li>Basic fMRI/EEG/pupillometry analysis knowledge</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project6.jpg" class="img-fluid" alt="">
+          </div>
+        </div> <!-- Project Item RIGHT -->
+
+        <hr>
+
+        <!--Project 7-->
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project_generic.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/14" target="_blank">Probabilistic models of brain connectivity at rest from fMRI data</a></h3>
+            <p>By <b>Miguel Ibanez Berganza, Arianna Armanetti, Gabriele Poidomani & Francesca Santucci</b></p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj5">Description</a>
+
+            <div class="collapse" id='collapse_prj5'>
+              <p>
+                <br>
+                We aim to develop a new class of probabilistic models to enhance the understanding of brain connectivity at rest, leveraging resting-state fMRI data. Our goal is to create models that balance the simplicity of traditional Gaussian approaches with the complexity and richness of dynamic models like DCM, addressing neuroscientists' need for more interpretable and efficient tools to analyse functional brain networks.
+                <br>
+                Our focus will be on extending Gaussian models through regularization techniques and introducing a novel approach based on neural network tools such as the Boltzmann Machine. These methods promise to offer both simplicity and robust performance in capturing the intricacies of brain connectivity.
+                <br>
+                We will use a preprocessed dataset, allowing us to immediately begin developing and testing our models. Our process involves reproducing results from established Gaussian approaches in the literature as a baseline, followed by tackling the more challenging task of implementing and training innovative models.
+                <br>
+                We believe this project is valuable because it introduces fresh, effective methods for modeling brain connectivity using relatively simple yet powerful approaches.
+                <br>
+                <br>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                  <li>Baseline implementation: Reproduce existing results using traditional Gaussian models to validate the initial setup</li>
+                  <li>Enhancement of existing model
+                    <ul>
+                      <li>Study the possible regularisation techniques for the gaussian model</li>
+                      <li>Implement 2 or three gaussian regularised models</li>
+                      <li>Test their performance in out-of-sample predictability</li>
+                    </ul>
+                  </li>
+                  <li>Implement a new model
+                    <ul>
+                      <li>Implement the Boltzman Machine for this specific dataset</li>
+                      <li>Train the model</li>
+                      <li>Test its performance in out-of-sample predictability</li>
+                    </ul>
+                  </li>
+                  <li>Comparison: Compare the performance of the different models and find the best one</li>
+                  <li>Bonus: train the Boltzman Machine model on a labeled dataset and test its classification performance</li>
+                </ul>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Python coding</li>
+                  <li>Basic notions of probabilistic models</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+        </div> <!-- Project Item LEFT -->
 
         <hr>
 
