new website for 2025

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <a href="https://www.imtlucca.it/" target="_blank">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="images/logo/logo_imt.png" class="imtlogo">
+        <img src="images/logo/logo_imt_white.png" class="imtlogo">
         <!-- <h1>Append</h1> -->
         <!-- <span>.</span> -->
       </a>
@@ -92,7 +92,7 @@
     <!-- Hero Section - Home Page -->
     <section id="hero" class="hero">
 
-      <img src="images/head/LUCCA.avif" alt="" data-aos="fade-in">
+      <img src="images/head/luccaascii.png" alt="" data-aos="fade-in">
 
       <div class="container">
         <div class="row">
@@ -104,7 +104,7 @@
 
         <div class="row">
           <div class="col-xl-5 col-lg-5 hero-img" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/logo/BHL2025.png" alt="BrainHack Lucca">
+            <img src="images/logo/bhl2025_shade_sign.png" alt="BrainHack Lucca">
           </div>
         </div>
 
@@ -149,19 +149,19 @@
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <a href="https://next-generation-eu.europa.eu/index_it" target="_blank">
-              <img src="images/contributors/IT_EU.png" class="img-fluid" alt="NextGenerationEU">
+              <img src="images/contributors/IT_EU_alpha.png" class="img-fluid" alt="NextGenerationEU">
             </a>
           </div>
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <a href="https://www.mur.gov.it/it" target="_blank">
-              <img src="images/contributors/LOGO_UniversitaRicerca.jpg" class="img-fluid" alt="MUR">
+              <img src="images/contributors/LOGO_UniversitaRicerca_alpha.png" class="img-fluid" alt="MUR">
             </a>
           </div>
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <a href="https://www.italiadomani.gov.it/content/sogei-ng/it/it/home.html" target="_blank">
-              <img src="images/contributors/italiadomani.jpg" class="img-fluid" alt="ItaliaDomani">
+              <img src="images/contributors/italiadomani_alpha.png" class="img-fluid" alt="ItaliaDomani">
             </a>
           </div>
 
@@ -219,9 +219,12 @@
     </section><!-- End Clients Section -->
 
     <!-- About Section - Home Page -->
-    <section id="about" class="about">
+    <section id="about" class="about" style="background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.4)), url('images/head/pattern_orange.png');">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!-- <img src="images/head/pattern.png" alt="" data-aos="fade-in" style="position: absolute; display: block; -o-object-fit: cover;
+  object-fit: cover;"> -->
+
+      <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
         <div class="row align-items-xl-center gy-5">
 
           <div class="col-xl-7 content">
@@ -313,7 +316,10 @@
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
 
           <!-- Schdule Day 1 -->
-          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+          <h1 class="tab-content row justify-content-center">
+            Program in progress!
+          </h1>
+          <!-- <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:00</time></div>
@@ -328,7 +334,14 @@
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:30</time></div>
-              <div class="col-md-10">
+              <div class="col-md-5">
+                <div class="speaker">
+                  <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
+                </div>
+                <h4>Introduction to BrainHack<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
+                <p>Introduction to BrainHack Lucca 2025</p>
+              </div>
+              <div class="col-md-5">
                 <div class="speaker">
                   <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
                 </div>
@@ -436,11 +449,11 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
           <!-- End Schdule Day 1 -->
 
           <!-- Schdule Day 2 -->
-          <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-2">
+          <!-- <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:00</time></div>
@@ -508,22 +521,11 @@
               </div>
             </div>
 
-            <!-- <div class="row schedule-item">
-              <div class="col-md-2"><time>17:00 PM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="images/program/project.jpg" alt="Speaker">
-                </div>
-                <h4>Intermediate projects presentation<span> - Projects Leaders</span></h4>
-                <p>Small intermediate presentation by project leaders in Marseille and Lucca</p>
-              </div>
-            </div> -->
-
-          </div>
+          </div> -->
           <!-- End Schdule Day 2 -->
 
           <!-- Schdule Day 3 -->
-          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:00</time></div>
@@ -591,22 +593,11 @@
               </div>
             </div>
 
-            <!-- <div class="row schedule-item">
-              <div class="col-md-2"><time>17:00 PM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="images/program/project.jpg" alt="Speaker to define">
-                </div>
-                <h4>BrainHack Marseille Wrapup / BrainHack Lucca intermediate presentation<span> - Projects Leaders</span></h4>
-                <p>To share the results of BrainHack Marseille and the preliminar results of BrainHack Lucca</p>
-              </div>
-            </div> -->
-
-          </div>
+          </div> -->
           <!-- End Schdule Day 3 -->
 
           <!-- Schdule Day 4 -->
-          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-4">
+          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-4">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:00</time></div>
@@ -685,7 +676,7 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
           <!-- End Schdule Day 4 -->
 
         </div>
@@ -740,7 +731,7 @@
     </section><!-- End Stats Section -->
 
     <!-- Register Section - Home Page -->
-    <section id="register" class="register">
+    <section id="register" class="register" style="background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.4)), url('images/head/pattern_orange.png');">
 
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -760,10 +751,10 @@
             <div class="register-btn align-items-center justify-content-center d-flex">
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
-                <h4 class="title reg-btn" title="Registration is now open!"><a href="https://forms.gle/zBVooM7QRqPjrfkr9" target="_blank" class="stretched-link" style='background-color: #d96000'>Register</a></h4>
+                <h4 class="title reg-btn" title="Registration is now open!"><a href="https://forms.gle/zBVooM7QRqPjrfkr9" target="_blank" class="stretched-link" style='background-color: #002039'>Register</a></h4>
                 <!-- <p class="description">Register now using the google form.</p> -->
                 <!-- <p class="description">There are still <b>3 places available!</b></p> -->
-                <p class="description">Registration <b>is now closed.</b></p>
+                <p class="description">Registration <b>is now open.</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
@@ -847,7 +838,7 @@
       </div><!-- End Section Title -->
 
       <div class="container submit d-flex flex-column align-items-center">
-        <button style="background-color: #d96000">
+        <button style="background-color: #002039">
           <a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/new?assignees=&labels=project&projects=&template=brainhack-project-template-2025.yml" target="_blank">Submit a Project</a>
         </button>
         <p>Click to submit a project filling a GitHub issue template!</p>
@@ -862,7 +853,7 @@
         <hr>
 
         <!--Project 1-->
-         <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+<!--          <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project1.png" class="img-fluid" alt="">
           </div>
@@ -899,7 +890,7 @@
             </div>
 
           </div>
-        </div>  --><!-- Project Item LEFT -->
+        </div>  --><!-- Project Item LEFT
 
         <hr>
 
@@ -1223,7 +1214,7 @@
     </section><!-- End Projects Section -->
 
     <!-- Team Section - Home Page -->
-    <section id="team" class="team">
+    <section id="team" class="team" style="background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.4)), url('images/head/pattern_orange.png');">
 
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -1285,21 +1276,37 @@
             </div>
           </div><!-- End Team Member -->
 
-          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
-              <img src="images/team/LS.png" class="img-fluid" alt="">
+              <img src="images/team/LF.jpeg" class="img-fluid" alt="">
               <div class="social">
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Leila Salvesen</h4>
+              <h4>Linda Fiorini</h4>
               <span>PhD Student</span>
             </div>
-          </div> --><!-- End Team Member -->
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
+            <div class="member-img">
+              <img src="images/team/MF.png" class="img-fluid" alt="">
+              <div class="social">
+                <!-- <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a> -->
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>Marco Fioretti</h4>
+              <span>Research Assistant</span>
+            </div>
+          </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
@@ -1508,7 +1515,7 @@
     <!-- Call-to-action Section - Home Page -->
     <section id="call-to-action" class="call-to-action">
 
-      <img src="images/head/San_Francesco.JPG" alt="">
+      <img src="images/head/campus.jpeg" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
@@ -1569,7 +1576,7 @@
     </section><!-- End Recent-posts Section -->
 
     <!-- Contact Section - Home Page -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3)), url('images/head/pattern_orange.png');">
 
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -1706,7 +1713,7 @@
   </main>
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
+  <footer id="footer" class="footer" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3)), url('images/head/pattern_orange.png');">
 
     <div class="container footer-top">
       <div class="row gy-4">
@@ -1717,7 +1724,7 @@
           <p>Thank you for visiting our website, we hope you found the initiative interesting and to see you soon!</p>
           <div class="social-links d-flex mt-4">
             <a href="https://github.com/brainhacklucca/" target="_blank"><i class="bi bi-github"></i></a>
-            <a href="https://twitter.com/BrainHackLucca/" target="_blank"><i class="bi bi-twitter"></i></a>
+            <!-- <a href="https://twitter.com/BrainHackLucca/" target="_blank"><i class="bi bi-twitter"></i></a> -->
             <a href="https://www.instagram.com/BrainHackLucca/" target="_blank"><i class="bi bi-instagram"></i></a>
             <!-- <a href=""><i class="bi bi-linkedin"></i></a> -->
           </div>
