--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </a>
 
       <!-- Nav Menu -->
-      <nav id="navmenu" class="navmenu d-flex fixed-top justify-content-center"> <!-- maybe we can remove fixed-top -->
+      <nav id="navmenu" class="navmenu d-flex fixed-top justify-content-center" style="background-color: #f0bf99;"> <!-- maybe we can remove fixed-top -->
         <ul>
           <li><a href="index.html#hero" class="active">Home</a></li>
           <li><a href="index.html#about">About</a></li>
