--- a/index.html
+++ b/index.html
@@ -1515,7 +1515,7 @@
     <!-- Call-to-action Section - Home Page -->
     <section id="call-to-action" class="call-to-action">
 
-      <img src="images/head/campus.jpg" alt="">
+      <img src="images/head/campus.jpeg" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
