first draft of the program

--- a/index.html
+++ b/index.html
@@ -309,8 +309,11 @@
 
         <h3 class="sub-heading">
           You can find the complete BrainHack Lucca program here.<br> <!--Insert PDF download-->
-          The first day is dedicated to teaching, with training sessions on different open science tools.<br>
+          The first day is dedicated to teaching, with training sessions on different open science tools.
+          <br>
           The following days will be focused on collaborative working (hacking sessions).
+          <br><br>
+          This year we will have <b>two parallel sessions</b> on day one morning! Choose wisely!
         </h3>
 
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
@@ -319,11 +322,11 @@
           <h1 class="tab-content row justify-content-center">
             Program in progress!
           </h1>
-          <!-- <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:00</time></div>
-              <div class="col-md-10">
+              <div class="col-md-4"><time>09:00</time></div>
+              <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/breakfast.jpg" alt="Welcoming, coffee and delicacies">
                 </div>
@@ -333,59 +336,91 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30</time></div>
-              <div class="col-md-5">
+              <div class="col-md-4"><time>09:30</time></div>
+              <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
                 </div>
-                <h4>Introduction to BrainHack<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
+                <h4>Introduction to BrainHack</h4>
+                <h4><span>Ruggero Basanisi (IMT, Lucca)</span></h4>
                 <p>Introduction to BrainHack Lucca 2025</p>
               </div>
-              <div class="col-md-5">
-                <div class="speaker">
-                  <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
-                </div>
-                <h4>Introduction to BrainHack<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
-                <p>Introduction to BrainHack Lucca 2025</p>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-6 schedule-org">
+                <h4>BASIC</h4>
+                <!-- <p>Hosted in Cappella Guinigi</p> -->
+              </div>
+              <div class="col-md-6 schedule-org">
+                <h4>ADVANCED</h4>
+                <!-- <p>Hosted in Sagrestia</p> -->
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:45</time></div>
-              <div class="col-md-10">
+              <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/training.gif" alt="Fabio Pinelli">
+                  <img src="images/program/pinelli.jpeg" alt="Fabio Pinelli">
                 </div>
-                <h4>Training: Python basics<span> - Fabio Pinelli (Lucca, IMT)</span></h4>
+                <h4>Training: Python basics</h4>
+                <h4><span>Fabio Pinelli (IMT, Lucca)</span></h4>
                 <p>Brief Introduction to Python</p>
               </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>11:15</time></div>
-              <div class="col-md-10">
+              <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/RB.jpeg" alt="Ruggero Basanisi">
+                  <img src="images/program/battaglini.jpg" alt="Ruggero Basanisi">
                 </div>
-                <h4>Training: Going on with Python<span> - Ruggero Basanisi (Lucca, IMT)</span></h4>
-                <p>Exploring useful libraries for Python programming</p>
+                <h4>Representational Similarity Analysis (TBD)</h4>
+                <h4><span>Chiara Battaglini (IUSS, Pavia)</span></h4>
+                <p>TBD</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:00</time></div>
-              <div class="col-md-10">
+              <div class="col-md-2"><time>10:50</time></div>
+              <div class="col-md-5">
+                <div class="speaker">
+                  <img src="images/program/pinelli.jpeg" alt="Ruggero Basanisi">
+                </div>
+                <h4>Training: Going on with Python</h4>
+                <h4><span>Fabio Pinelli (IMT, Lucca)</span></h4>
+                <p>Start programming with Python</p>
+              </div>
+              <div class="col-md-5">
+                <div class="speaker">
+                  <img src="images/program/person.png" alt="Ruggero Basanisi">
+                </div>
+                <h4>TBD</h4>
+                <h4><span>TBD</span></h4>
+                <p>TBD</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>11:55</time></div>
+              <div class="col-md-5">
                 <div class="speaker">
                   <img src="images/program/ML.jpg" alt="Matteo Lionello">
                 </div>
-                <h4>Training: Git & GitHub<span> - Matteo Lionello (Lucca, IMT)</span></h4>
-                <p>How to keep track of code changes and boost collaboration</p>
+                <h4>Training: Git & GitHub</h4>
+                <h4><span>Matteo Lionello (IMT, Lucca)</span></h4>
+                <p>How and why using Version Control Systems</p>
+              </div>
+              <div class="col-md-5">
+                <div class="speaker">
+                  <img src="images/program/person.png" alt="Ruggero Basanisi">
+                </div>
+                <h4>TBD</h4>
+                <h4><span>TBD</span></h4>
+                <p>TBD</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00</time></div>
-              <div class="col-md-10">
+              <div class="col-md-4"><time>13:00</time></div>
+              <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
@@ -395,19 +430,27 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:00</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="images/program/training.gif" alt="Fabio Pinelli">
-                </div>
-                <h4>Training: Machine learning with Python: an overview<span> - Fabio Pinelli (Lucca, IMT)</span></h4>
-                <p>Introduction to machine learning basics using Python</p>
+              <div class="col-md-10 schedule-org">
+                <h4>INTERMEDIATE</h4>
+                <p>Hosted in Cappella Guinigi</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>15:30</time></div>
-              <div class="col-md-10">
+              <div class="col-md-4"><time>14:00</time></div>
+              <div class="col-md-8">
+                <div class="speaker">
+                  <img src="images/program/iacovella.png" alt="Vittorio Iacovella">
+                </div>
+                <h4>FAIR enough</h4>
+                <h4><span>Vittorio Iacovella (UniTrento, Trento)</span></h4>
+                <p>Fine-tuning your research outputs to foster reproducibility.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-4"><time>15:30</time></div>
+              <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE">
                 </div>
@@ -417,19 +460,20 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:00</time></div>
-              <div class="col-md-10">
+              <div class="col-md-4"><time>16:00</time></div>
+              <div class="col-md-8">
                 <div class="speaker">
-                  <img src="images/program/GH.jpg" alt="Giacomo Handjaras">
+                  <img src="images/program/bortoletto.jpg" alt="Marta Bortoletto">
                 </div>
-                <h4>Training: Tools for fMRI processing<span> - Giacomo Handjaras (Lucca, IMT)</span></h4>
-                <p>How to manage and process fMRI data</p>
+                <h4>From pre-registration to word-wide collaborative projects</h4>
+                <h4><span>Marta Bortoletto (IMT, Lucca)</span></h4>
+                <p>Everything You Always Wanted to Know About Open Science* (*But Were Afraid to Ask)</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>17:30</time></div>
-              <div class="col-md-10">
+              <div class="col-md-4"><time>17:30</time></div>
+              <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/project.jpg" alt="Projects' Presentation">
                 </div>
@@ -439,8 +483,8 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>18:00</time></div>
-              <div class="col-md-10">
+              <div class="col-md-4"><time>18:00</time></div>
+              <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/networking.gif" alt="Party!">
                 </div>
@@ -449,11 +493,11 @@
               </div>
             </div>
 
-          </div> -->
+          </div>
           <!-- End Schdule Day 1 -->
 
           <!-- Schdule Day 2 -->
-          <!-- <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-2">
+          <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:00</time></div>
@@ -521,11 +565,23 @@
               </div>
             </div>
 
-          </div> -->
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>17:30</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/person.png" alt="Ruggero Basanisi">
+                </div>
+                <h4>TBD</h4>
+                <h4><span>TBD</span></h4>
+                <p>TBD</p>
+              </div>
+            </div>
+
+          </div>
           <!-- End Schdule Day 2 -->
 
           <!-- Schdule Day 3 -->
-          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:00</time></div>
@@ -593,11 +649,23 @@
               </div>
             </div>
 
-          </div> -->
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>17:30</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="images/program/barattieri_dsp.jpg" alt="Chiara Barattieri di San Pietro">
+                </div>
+                <h4>Distributional semantics & NLP (TBD)</h4>
+                <h4><span>Chiara Barattieri di San Pietro (IUSS, Pavia)</span></h4>
+                <p>TBD</p>
+              </div>
+            </div>
+
+          </div>
           <!-- End Schdule Day 3 -->
 
           <!-- Schdule Day 4 -->
-          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-4">
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-4">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:00</time></div>
@@ -666,7 +734,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>17:00</time></div>
+              <div class="col-md-2"><time>17:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/project.jpg" alt="All">
@@ -676,7 +744,7 @@
               </div>
             </div>
 
-          </div> -->
+          </div>
           <!-- End Schdule Day 4 -->
 
         </div>
